clean up and full functionality
